# somegame

./: CMakeLists.txt  shell.nix
.cache/clangd/index/: main.cc.AC14E6E583A2CEA0.idx
inc/: component.hpp  drawable.hpp  game.hpp  registry.hpp  rendersystem.hpp  scene.hpp  system.hpp  types.hpp  windowsettings.hpp
src/: game.cc  main.cc  registry.cc  rendersystem.cc  system.cc
